syntax = "proto3";

package keyauth.endpoint;
option go_package = "github.com/infraboard/keyauth/pkg/endpoint";

import "pkg/endpoint/pb/request.proto";
import "pkg/endpoint/pb/endpoint.proto";
import "pkg/endpoint/pb/resource.proto";

// Service token管理服务
service EndpointService {
	rpc DescribeEndpoint(DescribeEndpointRequest) returns(Endpoint);
	rpc QueryEndpoints(QueryEndpointRequest) returns(Set);
	rpc Registry(RegistryRequest) returns(RegistryResponse);
	rpc DeleteEndpoint(DeleteEndpointRequest) returns(Endpoint);
	rpc QueryResources(QueryResourceRequest) returns(ResourceSet);
}